direct packages in install

--- a/install
+++ b/install
@@ -161,106 +161,952 @@ fi
 
 #DFN: KM=us
 #DFN: CL=99
-#DFN: LA_NG="de_DE ru_RU"
-#DFN: ZONE=Vienna
-#DFN: AIP2=1.106
+#DFN: LA_NG="de_DE es_ES fr_FR it_IT ru_RU"
+#DFN: AIP2=1.108
 
-#rpuntaie-meta needs about 40GB disk space
-#rpuntaie-meta on https://github.com/rpuntaie/rollarch
-#rollarch rpuntaie-meta is served from another Arch on the LAN via AIP2
-#PKG: rpuntaie-meta
-
-##else with less packages ##-># and add a # above
-##PKG: base
-##PKG: base-devel
-##PKG: linux
-##PKG: linux-firmware
-##PKG: mkinitcpio
-##PKG: hwinfo
-##PKG: nfs-utils
-##PKG: devtools
-##PKG: dialog
-##PKG: wpa_supplicant
-##PKG: ifenslave
-##PKG: ifplugd
-##PKG: ntp
-##PKG: stow
-##PKG: ripgrep
-##PKG: fd
-##PKG: bc
-##PKG: tmux
-##PKG: wget
-##PKG: fzf
-##PKG: udisks2
-##PKG: unzip
-##PKG: pacman-contrib
-##PKG: bat
-##PKG: ncdu
-##PKG: the_silver_searcher
-##PKG: p7zip
-##PKG: ranger
-##PKG: mtpfs
-##PKG: pass
-##PKG: openssh-askpass
-##PKG: lsof
-##PKG: systemd-resolvconf
-##PKG: cscope
-##PKG: ctags
-##PKG: llvm
-##PKG: gdb
-##PKG: zsh-syntax-highlighting
-##PKG: zsh-autosuggestions
-##PKG: zsh-completions
-##PKG: zsh-history-substring-search
-##PKG: neovim
-##PKG: vim-spell-en
-##PKG: python-scipy
-##PKG: python-sympy
-##PKG: python-matplotlib
-##PKG: python-pip
-##PKG: python-mock
-##PKG: python-pytest-mock
-##PKG: python-pytest-cov
-##PKG: python-wheel
-##PKG: python-pandas
-##PKG: python-lxml
-##PKG: python-pyx
-##PKG: python-bottle
-##PKG: python-cairosvg
-##PKG: python-click
-##PKG: python-doit
-##PKG: ipython
-##PKG: pandoc
-##PKG: alsa-utils
-##PKG: pulseaudio-alsa
-##PKG: pulsemixer
-##PKG: xf86-video-intel
-##PKG: xorg-server
-##PKG: xorg-apps
-##PKG: ibus-libpinyin
-##PKG: ibus-m17n
-##PKG: xdg-user-dirs
-##PKG: wmctrl
-##PKG: xmonad-contrib
-##PKG: urxvt-perls
-##PKG: xorg-xinit
-##PKG: dmenu
-##PKG: scrot
-##PKG: slock
-##PKG: libnotify
-##PKG: dunst
-##PKG: dex
-##PKG: inkscape
-##PKG: vlc
-##PKG: firefox
-##PKG: w3m
-##PKG: browserpass-firefox
-##PKG: eom
-##PKG: feh
-##PKG: zathura-djvu
-##PKG: zathura-pdf-mupdf
-##PKG: gvim
-##PKG: boost
-##PKG: cmake
-##PKG: meson
+#PKG: bash
+#PKG: bzip2
+#PKG: coreutils
+#PKG: cryptsetup
+#PKG: device-mapper
+#PKG: dhcpcd
+#PKG: diffutils
+#PKG: e2fsprogs
+#PKG: file
+#PKG: filesystem
+#PKG: findutils
+#PKG: gawk
+#PKG: gcc-libs
+#PKG: gettext
+#PKG: glibc
+#PKG: grep
+#PKG: gzip
+#PKG: inetutils
+#PKG: iproute2
+#PKG: iputils
+#PKG: jfsutils
+#PKG: less
+#PKG: licenses
+#PKG: linux
+#PKG: linux-headers
+#PKG: linux-firmware
+#PKG: logrotate
+#PKG: lvm2
+#PKG: man-db
+#PKG: man-pages
+#PKG: mdadm
+#PKG: nano
+#PKG: netctl
+#PKG: pacman
+#PKG: pciutils
+#PKG: perl
+#PKG: cpanminus
+#PKG: procps-ng
+#PKG: psmisc
+#PKG: reiserfsprogs
+#PKG: s-nail
+#PKG: sed
+#PKG: shadow
+#PKG: sysfsutils
+#PKG: systemd-sysvcompat
+#PKG: tar
+#PKG: texinfo
+#PKG: usbutils
+#PKG: util-linux
+#PKG: vi
+#PKG: which
+#PKG: xfsprogs
+#PKG: autoconf
+#PKG: automake
+#PKG: binutils
+#PKG: bison
+#PKG: fakeroot
+#PKG: fakechroot
+#PKG: flex
+#PKG: gcc
+#PKG: groff
+#PKG: libtool
+#PKG: m4
+#PKG: make
+#PKG: patch
+#PKG: pkgconf
+#PKG: sudo
+#PKG: systemd
+#PKG: tzdata
+#PKG: ncurses
+#PKG: readline
+#PKG: attr
+#PKG: acl
+#PKG: gmp
+#PKG: libsasl
+#PKG: keyutils
+#PKG: krb5
+#PKG: libtirpc
+#PKG: pam
+#PKG: libtasn1
+#PKG: libffi
+#PKG: libp11-kit
+#PKG: libgpg-error
+#PKG: libgcrypt
+#PKG: lz4
+#PKG: xz
+#PKG: zlib
+#PKG: zstd
+#PKG: libssh2
+#PKG: libunistring
+#PKG: libpsl
+#PKG: db
+#PKG: libnsl
+#PKG: hicolor-icon-theme
+#PKG: libtiff
+#PKG: lcms2
+#PKG: libnet
+#PKG: libpng
+#PKG: graphite
+#PKG: freetype2
+#PKG: giflib
+#PKG: libseccomp
+#PKG: libxml2
+#PKG: libmpc
+#PKG: icu
+#PKG: libcroco
+#PKG: gc
+#PKG: npth
+#PKG: libassuan
+#PKG: libsecret
+#PKG: pinentry
+#PKG: libice
+#PKG: dnssec-anchors
+#PKG: unibilium
+#PKG: xcb-proto
+#PKG: libzip
+#PKG: shared-mime-info
+#PKG: libedit
+#PKG: atk
+#PKG: xcb-util
+#PKG: startup-notification
+#PKG: lzo
+#PKG: pixman
+#PKG: cairo
+#PKG: dconf
+#PKG: libdatrie
+#PKG: libthai
+#PKG: fribidi
+#PKG: dbus
+#PKG: at-spi2-atk
+#PKG: libpciaccess
+#PKG: libomxil-bellagio
+#PKG: popt
+#PKG: argon2
+#PKG: libmnl
+#PKG: libnftnl
+#PKG: libnl
+#PKG: libnfnetlink
+#PKG: libnetfilter_conntrack
+#PKG: iptables
+#PKG: kdb
+#PKG: libtermkey
+#PKG: libxpm
+#PKG: libyuv
+#PKG: libde265
+#PKG: libheif
+#PKG: systemd-resolvconf
+#PKG: ccache
+#PKG: distcc
+#PKG: cppcheck
+#PKG: avahi
+#PKG: nss-mdns
+#PKG: openvpn
+#PKG: nmap
+#PKG: json-c
+#PKG: jsoncpp
+#PKG: lm_sensors
+#PKG: dosfstools
+#PKG: f2fs-tools
+#PKG: nfs-utils
+#PKG: unison
+#PKG: perl-error
+#PKG: perl-rename
+#PKG: perl-timedate
+#PKG: perl-mailtools
+#PKG: pcre2
+#PKG: cronie
+#PKG: inotify-tools
+#PKG: cpulimit
+#PKG: dpkg
+#PKG: tldr
+#PKG: mkosi
+#PKG: acpi
+#PKG: hwinfo
+#PKG: samba
+#PKG: wpa_supplicant
+#PKG: ifplugd
+#PKG: iw
+#PKG: ppp
+#PKG: ntp
+#PKG: lsof
+#PKG: bind
+#PKG: mtr
+#PKG: socat
+#PKG: htop
+#PKG: iotop
+#PKG: openbsd-netcat
+#PKG: strace
+#PKG: tcpdump
+#PKG: git
+#PKG: tig
+#PKG: git-annex
+#PKG: repo
+#PKG: mercurial
+#PKG: subversion
+#PKG: stow
+#PKG: ripgrep
+#PKG: fd
+#PKG: bc
+#PKG: tmux
+#PKG: wget
+#PKG: fzf
+#PKG: udisks2
+#PKG: unzip
+#PKG: unrar
+#PKG: bat
+#PKG: ncdu
+#PKG: jshon
+#PKG: the_silver_searcher
+#PKG: rtorrent
+#PKG: qbittorrent
+#PKG: tree
+#PKG: p7zip
+#PKG: ranger
+#PKG: file-roller
+#PKG: mlocate
+#PKG: rmlint
+#PKG: arch-install-scripts
+#PKG: asp
+#PKG: devtools
+#PKG: pacman-contrib
+#PKG: namcap
+#PKG: bash-bats
+#PKG: bash-completion
+#PKG: gmtp
+#PKG: mtpfs
+#PKG: android-file-transfer
+#PKG: gammu
+#PKG: dialog
+#PKG: openssh
+#PKG: sshfs
+#PKG: keybase
+#PKG: kbfs
+#PKG: keybase-gui
+#PKG: qrencode
+#PKG: gnupg
+#PKG: pass
+#PKG: mkcert
+#PKG: powerline
+#PKG: powerline-fonts
+#PKG: awesome-terminal-fonts
+#PKG: zsh
+#PKG: zsh-syntax-highlighting
+#PKG: zsh-autosuggestions
+#PKG: zsh-completions
+#PKG: zsh-history-substring-search
+#PKG: neovim
+#PKG: gvim
+#PKG: pluma
+#PKG: astyle
+#PKG: arch-wiki-lite
+#PKG: figlet
+#PKG: a2ps
+#PKG: lib32-glibc
+#PKG: cups
+#PKG: cups-filters
+#PKG: cups-pdf
+#PKG: gutenprint
+#PKG: foomatic-db-gutenprint-ppds
+#PKG: wkhtmltopdf
+#PKG: cmake
+#PKG: ninja
+#PKG: meson
+#PKG: cscope
+#PKG: ctags
+#PKG: llvm
+#PKG: clang
+#PKG: gdb
+#PKG: cgdb
+#PKG: lldb
+#PKG: boost
+#PKG: grpc
+#PKG: tbb
+#PKG: fmt
+#PKG: tensorflow
+#PKG: tensorboard
+#PKG: bazel
+#PKG: python
+#PKG: pypy3
+#PKG: ipython
+#PKG: jupyterlab
+#PKG: cython
+#PKG: twine
+#PKG: xonsh
+#PKG: yapf
+#PKG: autopep8
+#PKG: python-ipykernel
+#PKG: ansible
+#PKG: python-gobject
+#PKG: python-pyqt5
+#PKG: python-numpy
+#PKG: python-numpydoc
+#PKG: python-scipy
+#PKG: python-ipdb
+#PKG: python-sympy
+#PKG: python-tensorflow
+#PKG: python-tensorflow-estimator
+#PKG: python-tensorflow-serving-api
+#PKG: python-h5py
+#PKG: python-sip4
+#PKG: python-cffi
+#PKG: python-cairocffi
+#PKG: python-gammu
+#PKG: python-appdirs
+#PKG: python-beautifulsoup4
+#PKG: python-html5lib
+#PKG: python-bleach
+#PKG: python-pytz
+#PKG: python-docker
+#PKG: python-docutils
+#PKG: python-gmpy2
+#PKG: python-jinja
+#PKG: python-matplotlib
+#PKG: python-pillow
+#PKG: python-pip
+#PKG: python-pygal
+#PKG: python-pygments
+#PKG: python-pylint
+#PKG: python-whoosh
+#PKG: python-ordered-set
+#PKG: python-watchdog
+#PKG: python-py
+#PKG: python-pytest
+#PKG: python-mock
+#PKG: python-pytest-mock
+#PKG: python-coverage
+#PKG: python-pytest-cov
+#PKG: python-setuptools
+#PKG: python-setuptools-scm
+#PKG: python-wheel
+#PKG: python-snowballstemmer
+#PKG: python-virtualenv
+#PKG: python-yaml
+#PKG: python-django
+#PKG: python-tornado
+#PKG: python-tox
+#PKG: python-packaging
+#PKG: python-pandas
+#PKG: python-pandas-datareader
+#PKG: python-cvxopt
+#PKG: python-webtest
+#PKG: python-six
+#PKG: python-sphinx
+#PKG: python-sphinx-alabaster-theme
+#PKG: python-sphinx-testing
+#PKG: python-gitpython
+#PKG: python-sphinx_rtd_theme
+#PKG: python-pathspec
+#PKG: python-pudb
+#PKG: python-grpcio
+#PKG: gunicorn
+#PKG: uwsgi
+#PKG: python-redis
+#PKG: python-sphinxcontrib-applehelp
+#PKG: python-sphinxcontrib-autoprogram
+#PKG: python-sphinxcontrib-bibtex
+#PKG: python-sphinxcontrib-blockdiag
+#PKG: python-sphinxcontrib-devhelp
+#PKG: python-sphinxcontrib-htmlhelp
+#PKG: python-sphinxcontrib-jsmath
+#PKG: python-sphinxcontrib-newsfeed
+#PKG: python-sphinxcontrib-qthelp
+#PKG: python-sphinxcontrib-seqdiag
+#PKG: python-sphinxcontrib-serializinghtml
+#PKG: python-sphinxcontrib-trio
+#PKG: python-pyxdg
+#PKG: python-msgpack
+#PKG: python-chardet
+#PKG: python-cachecontrol
+#PKG: python-lxml
+#PKG: python-lxml-docs
+#PKG: python-pyx
+#PKG: python-markupsafe
+#PKG: python-attrs
+#PKG: python-dateutil
+#PKG: python-decorator
+#PKG: python-pyparsing
+#PKG: python-nltk
+#PKG: python-pycparser
+#PKG: python-pycurl
+#PKG: python-requests
+#PKG: python-twisted
+#PKG: python-urllib3
+#PKG: python-urllib3-doc
+#PKG: python-cairosvg
+#PKG: python-click
+#PKG: python-click-log
+#PKG: python-click-repl
+#PKG: python-webencodings
+#PKG: python-click-threading
+#PKG: python-colorama
+#PKG: python-fuse
+#PKG: python-qrencode
+#PKG: python-wikipedia
+#PKG: python-doit
+#PKG: python-bottle
+#PKG: python-flask
+#PKG: python-pony
+#PKG: python-sqlalchemy
+#PKG: python-flask-appconfig
+#PKG: python-flask-babel
+#PKG: python-contextlib2
+#PKG: python-distro
+#PKG: python-flask-babelex
+#PKG: python-flask-bootstrap
+#PKG: python-flask-caching
+#PKG: python-flask-dance
+#PKG: python-flask-debug
+#PKG: python-flask-gravatar
+#PKG: python-flask-htmlmin
+#PKG: python-flask-jwt
+#PKG: python-flask-login
+#PKG: python-flask-mail
+#PKG: python-flask-marshmallow
+#PKG: python-flask-migrate
+#PKG: python-flask-nav
+#PKG: python-flask-paranoid
+#PKG: python-flask-principal
+#PKG: python-retrying
+#PKG: python-toml
+#PKG: python-flask-restful
+#PKG: python-flask-security
+#PKG: python-ply
+#PKG: python-flask-socketio
+#PKG: python-flask-sphinx-themes
+#PKG: python-progress
+#PKG: python-flask-sqlalchemy
+#PKG: python-flask-talisman
+#PKG: python-flask-wtf
+#PKG: python-black
+#PKG: python-pybtex
+#PKG: python-pybtex-docutils
+#PKG: python-service-identity
+#PKG: python-aws-sam-translator
+#PKG: python-aws-xray-sdk
+#PKG: python-pynvim
+#PKG: python-inflection
+#PKG: python-srcinfo
+#PKG: python-iniconfig
+#PKG: python-pluggy
+#PKG: python-apipkg
+#PKG: python-imagesize
+#PKG: python-openpyxl
+#PKG: sqlite
+#PKG: mariadb
+#PKG: postgresql
+#PKG: postgresql-libs
+#PKG: redis
+#PKG: java-runtime-common
+#PKG: java-environment-common
+#PKG: jdk-openjdk
+#PKG: yarn
+#PKG: npm
+#PKG: nodejs
+#PKG: coffeescript
+#PKG: asar
+#PKG: prettier
+#PKG: scala
+#PKG: sbt
+#PKG: gradle
+#PKG: kotlin
+#PKG: clojure
+#PKG: rlwrap
+#PKG: groovy
+#PKG: ant
+#PKG: maven
+#PKG: jenkins
+#PKG: ghc
+#PKG: cabal-install
+#PKG: stack
+#PKG: hoogle
+#PKG: xmonad
+#PKG: xmonad-contrib
+#PKG: xmonad-utils
+#PKG: haskell-shake
+#PKG: haskell-haddock-library
+#PKG: nix
+#PKG: go
+#PKG: go-tools
+#PKG: mono
+#PKG: dotnet-sdk
+#PKG: skia-sharp
+#PKG: lua
+#PKG: rust
+#PKG: julia
+#PKG: gcc-fortran
+#PKG: gcc-objc
+#PKG: tcl
+#PKG: tk
+#PKG: ruby
+#PKG: ruby-irb
+#PKG: fpc
+#PKG: ocaml
+#PKG: elixir
+#PKG: typescript
+#PKG: ts-node
+#PKG: racket
+#PKG: guile
+#PKG: dcd
+#PKG: dfmt
+#PKG: dmd
+#PKG: dmd-docs
+#PKG: dscanner
+#PKG: dtools
+#PKG: dub
+#PKG: ldc
+#PKG: liblphobos
+#PKG: libphobos
+#PKG: xf86-input-libinput
+#PKG: xf86-video-intel
+#PKG: nvidia-utils
+#PKG: nvidia
+#PKG: xorg-server
+#PKG: xorgproto
+#PKG: libxext
+#PKG: libxss
+#PKG: libxrender
+#PKG: arandr
+#PKG: libxdmcp
+#PKG: libxau
+#PKG: libxcb
+#PKG: libxkbcommon
+#PKG: libxkbcommon-x11
+#PKG: libxtst
+#PKG: libxfixes
+#PKG: libxcursor
+#PKG: libxinerama
+#PKG: libxrandr
+#PKG: libxi
+#PKG: libxcomposite
+#PKG: libxdamage
+#PKG: libxxf86vm
+#PKG: libxshmfence
+#PKG: libglvnd
+#PKG: libxaw
+#PKG: wayland
+#PKG: adwaita-icon-theme
+#PKG: wayland-protocols
+#PKG: desktop-file-utils
+#PKG: xorg-bdftopcf
+#PKG: xorg-iceauth
+#PKG: xorg-mkfontscale
+#PKG: libunwind
+#PKG: xorg-sessreg
+#PKG: xorg-setxkbmap
+#PKG: xorg-smproxy
+#PKG: xorg-x11perf
+#PKG: xorg-xauth
+#PKG: xorg-xbacklight
+#PKG: xorg-xcmsdb
+#PKG: xorg-xcursorgen
+#PKG: xorg-xdpyinfo
+#PKG: xorg-xdriinfo
+#PKG: xorg-xev
+#PKG: xorg-xgamma
+#PKG: xorg-xhost
+#PKG: xorg-xinput
+#PKG: xorg-xkbcomp
+#PKG: xorg-xkbevd
+#PKG: xorg-xkbutils
+#PKG: xorg-xkill
+#PKG: xorg-xlsfonts
+#PKG: xorg-xlsatoms
+#PKG: xorg-xlsclients
+#PKG: xorg-xmodmap
+#PKG: xorg-xpr
+#PKG: xorg-xprop
+#PKG: xorg-xrandr
+#PKG: xorg-xrdb
+#PKG: xorg-xrefresh
+#PKG: xorg-xset
+#PKG: xorg-xsetroot
+#PKG: xorg-xvinfo
+#PKG: xorg-xwd
+#PKG: xorg-xwininfo
+#PKG: xorg-xwud
+#PKG: ibus-libpinyin
+#PKG: ibus-m17n
+#PKG: xdg-user-dirs
+#PKG: glfw-x11
+#PKG: xdotool
+#PKG: wmctrl
+#PKG: i3-wm
+#PKG: openbox
+#PKG: xterm
+#PKG: alacritty
+#PKG: rxvt-unicode
+#PKG: rxvt-unicode-terminfo
+#PKG: urxvt-perls
+#PKG: xorg-xinit
+#PKG: dmenu
+#PKG: gmrun
+#PKG: scrot
+#PKG: slock
+#PKG: libnotify
+#PKG: dunst
+#PKG: xsel
+#PKG: xclip
+#PKG: dex
+#PKG: noto-fonts
+#PKG: noto-fonts-emoji
+#PKG: noto-fonts-extra
+#PKG: ttf-liberation
+#PKG: ttf-bitstream-vera
+#PKG: ttf-fira-mono
+#PKG: ttf-fira-code
+#PKG: ttf-anonymous-pro
+#PKG: ttf-fantasque-sans-mono
+#PKG: ttf-dejavu
+#PKG: gnu-free-fonts
+#PKG: xorg-fonts-misc
+#PKG: ttf-inconsolata
+#PKG: ttf-roboto
+#PKG: cantarell-fonts
+#PKG: emacs
+#PKG: code
+#PKG: intellij-idea-community-edition
+#PKG: lazarus
+#PKG: pycharm-community-edition
+#PKG: nginx
+#PKG: php
+#PKG: xdebug
+#PKG: bluez
+#PKG: bluez-utils
+#PKG: alsa-utils
+#PKG: alsa-lib
+#PKG: python-pyalsa
+#PKG: pulseaudio
+#PKG: pulseaudio-alsa
+#PKG: pulseaudio-bluetooth
+#PKG: pavucontrol
+#PKG: pulsemixer
+#PKG: paprefs
+#PKG: lv2
+#PKG: jack2
+#PKG: fluidsynth
+#PKG: a2jmidid
+#PKG: adlplug
+#PKG: aeolus
+#PKG: aj-snapshot
+#PKG: aliki
+#PKG: amb-plugins
+#PKG: ambdec
+#PKG: ams
+#PKG: ams-lv2
+#PKG: amsynth
+#PKG: ardour
+#PKG: artyfx
+#PKG: aubio
+#PKG: audacity
+#PKG: avldrums.lv2
+#PKG: beatslash-lv2
+#PKG: blop
+#PKG: blop.lv2
+#PKG: bslizr
+#PKG: cadence
+#PKG: calf
+#PKG: caps
+#PKG: carla
+#PKG: chuck
+#PKG: cmt
+#PKG: csound
+#PKG: csoundqt
+#PKG: deteriorate-lv2
+#PKG: dgedit
+#PKG: din
+#PKG: dpf-plugins
+#PKG: dragonfly-reverb
+#PKG: drumgizmo
+#PKG: drumkv1
+#PKG: ebumeter
+#PKG: ecasound
+#PKG: eq10q
+#PKG: eteroj.lv2
+#PKG: fabla
+#PKG: faust
+#PKG: fil-plugins
+#PKG: fluajho
+#PKG: fomp.lv2
+#PKG: foxdot
+#PKG: freewheeling
+#PKG: g2reverb
+#PKG: geonkick
+#PKG: gigedit
+#PKG: gmsynth.lv2
+#PKG: helm
+#PKG: hexter
+#PKG: hydrogen
+#PKG: infamousplugins
+#PKG: ir.lv2
+#PKG: jaaa
+#PKG: jack_capture
+#PKG: jacktrip
+#PKG: jalv
+#PKG: japa
+#PKG: jconvolver
+#PKG: jnoisemeter
+#PKG: jsampler
+#PKG: linuxsampler
+#PKG: lmms
+#PKG: lsp-plugins
+#PKG: luppp
+#PKG: lv2file
+#PKG: marsyas
+#PKG: mcp-plugins
+#PKG: mda.lv2
+#PKG: meterbridge
+#PKG: midi_matrix.lv2
+#PKG: mixxx
+#PKG: moony.lv2
+#PKG: njconnect
+#PKG: noise-repellent
+#PKG: non-mixer
+#PKG: non-sequencer
+#PKG: non-session-manager
+#PKG: non-timeline
+#PKG: opnplug
+#PKG: osc2midi
+#PKG: osmid
+#PKG: padthv1
+#PKG: patchmatrix
+#PKG: patroneo
+#PKG: pd
+#PKG: pd-lua
+#PKG: polyphone
+#PKG: pvoc
+#PKG: qastools
+#PKG: qjackctl
+#PKG: qmidiarp
+#PKG: qmidictl
+#PKG: qmidinet
+#PKG: qmidiroute
+#PKG: qsampler
+#PKG: qsynth
+#PKG: qtractor
+#PKG: qxgedit
+#PKG: realtime-privileges
+#PKG: rev-plugins
+#PKG: rosegarden
+#PKG: samplv1
+#PKG: sc3-plugins
+#PKG: setbfree
+#PKG: sherlock.lv2
+#PKG: snd
+#PKG: solfege
+#PKG: sonic-pi
+#PKG: sonic-visualiser
+#PKG: sorcer
+#PKG: spectmorph
+#PKG: ssr
+#PKG: supercollider
+#PKG: sweep
+#PKG: swh-plugins
+#PKG: synthv1
+#PKG: tap-plugins
+#PKG: timidity++
+#PKG: vamp-aubio-plugins
+#PKG: vamp-plugin-sdk
+#PKG: vco-plugins
+#PKG: vm.lv2
+#PKG: vmpk
+#PKG: wah-plugins
+#PKG: wolf-shaper
+#PKG: wolf-spectrum
+#PKG: x42-plugins
+#PKG: yass
+#PKG: yoshimi
+#PKG: zam-plugins
+#PKG: zita-ajbridge
+#PKG: zita-at1
+#PKG: zita-bls1
+#PKG: zita-dc1
+#PKG: zita-dpl1
+#PKG: zita-lrx
+#PKG: zita-mu1
+#PKG: zita-njbridge
+#PKG: zita-rev1
+#PKG: zynaddsubfx
+#PKG: espeak-ng
+#PKG: vlc
+#PKG: ffmpeg
+#PKG: mpv
+#PKG: kodi
+#PKG: obs-studio
+#PKG: cmus
+#PKG: qemu-full
+#PKG: libvirt
+#PKG: virt-manager
+#PKG: bridge-utils
+#PKG: picocom
+#PKG: ddrescue
+#PKG: virtualbox-guest-utils
+#PKG: virtualbox-host-modules-arch
+#PKG: virtualbox
+#PKG: vagrant
+#PKG: docker
+#PKG: docker-compose
+#PKG: kubectl
+#PKG: dnsmasq
+#PKG: kicad
+#PKG: kicad-library
+#PKG: kicad-library-3d
+#PKG: pcb
+#PKG: ngspice
+#PKG: iverilog
+#PKG: yosys
+#PKG: verilator
+#PKG: gtkwave
+#PKG: gtk3
+#PKG: avr-binutils
+#PKG: avr-gcc
+#PKG: avr-gdb
+#PKG: avr-libc
+#PKG: arduino
+#PKG: arduino-docs
+#PKG: stlink
+#PKG: ghdl-gcc
+#PKG: python-pydecor
+#PKG: python-pyvhdlmodel
+#PKG: python-pyghdl
+#PKG: arm-none-eabi-gcc
+#PKG: arm-none-eabi-binutils
+#PKG: arm-none-eabi-newlib
+#PKG: libopencm3
+#PKG: doxygen
+#PKG: graphviz
+#PKG: xdot
+#PKG: vtk
+#PKG: mayavi
+#PKG: opencascade
+#PKG: opencv
+#PKG: opencv-samples
+#PKG: povray
+#PKG: openshot
+#PKG: librecad
+#PKG: blender
+#PKG: gimp
+#PKG: krita
+#PKG: inkscape
+#PKG: ktikz
+#PKG: fontforge
+#PKG: imagemagick
+#PKG: imagemagick-doc
+#PKG: openscad
+#PKG: libreoffice-fresh
+#PKG: plantuml
+#PKG: tesseract
+#PKG: tesseract-data-eng
+#PKG: recoll
+#PKG: pdfgrep
+#PKG: tracker
+#PKG: lucene++
+#PKG: pandoc
+#PKG: asciidoc
+#PKG: expat
+#PKG: docbook-xml
+#PKG: docbook-xsl
+#PKG: docbook-mathml
+#PKG: tidy
+#PKG: texlive-bibtexextra
+#PKG: texlive-core
+#PKG: texlive-fontsextra
+#PKG: texlive-formatsextra
+#PKG: texlive-games
+#PKG: texlive-humanities
+#PKG: texlive-latexextra
+#PKG: texlive-music
+#PKG: texlive-pictures
+#PKG: texlive-pstricks
+#PKG: texlive-publishers
+#PKG: texlive-science
+#PKG: texlive-langchinese
+#PKG: texlive-langcyrillic
+#PKG: texlive-langextra
+#PKG: texlive-langgreek
+#PKG: texlive-langjapanese
+#PKG: texlive-langkorean
+#PKG: mathjax
+#PKG: qtikz
+#PKG: latex2html
+#PKG: firefox
+#PKG: chromium
+#PKG: links
+#PKG: qutebrowser
+#PKG: w3m
+#PKG: browserpass
+#PKG: browserpass-firefox
+#PKG: browserpass-chromium
+#PKG: tor
+#PKG: torbrowser-launcher
+#PKG: eom
+#PKG: feh
+#PKG: evince
+#PKG: nautilus
+#PKG: kdiff3
+#PKG: ghostscript
+#PKG: poppler
+#PKG: mupdf
+#PKG: zathura
+#PKG: zathura-djvu
+#PKG: zathura-pdf-mupdf
+#PKG: zathura-ps
+#PKG: catfish
+#PKG: python-pdfminer
+#PKG: neomutt
+#PKG: isync
+#PKG: msmtp
+#PKG: msmtp-mta
+#PKG: notmuch
+#PKG: urlscan
+#PKG: afew
+#PKG: alot
+#PKG: weechat
+#PKG: signal-desktop
+#PKG: rclone
+#PKG: dictd
+#PKG: vim-spell-en
+#PKG: vim-spell-de
+#PKG: vim-spell-it
+#PKG: vim-spell-fr
+#PKG: vim-spell-ru
+#PKG: vim-spell-es
+#PKG: translate-shell
+#PKG: eigen
+#PKG: openblas
+#PKG: octave
+#PKG: sagemath
+#PKG: r
+#PKG: geogebra
+#PKG: root
+#PKG: gnuplot
+#PKG: coq
+#PKG: glpk
+#PKG: coin-or-cbc
+#PKG: coin-or-cgl
+#PKG: coin-or-clp
+#PKG: coin-or-coinutils
+#PKG: coin-or-mp
+#PKG: coin-or-osi
+#PKG: cfitsio
+#PKG: pymol
+#PKG: wcslib
+#PKG: task
+#PKG: timew
+#PKG: ledger
 
